...maybe vw and vh? Trying to fix scrolling background on mobile

--- a/css/shared.css
+++ b/css/shared.css
@@ -38,7 +38,7 @@ html, body {
 	background-image: url('../images/gloriousRunk.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size: 100% 100%;
+	background-size: 100vw 100vh;
 }
 
 footer {
